[package]
name = "gstar_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ezpc = { git = "https://github.com/pulseq-frame/ezpc.git" }
interp = "1.0.3"
serde_with = "3.12.0"
