[package]
name = "pygstar"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies.pyo3]
features = ["extension-module", "generate-import-lib"]
[dependencies]

# gstar_parser = {git = "https://gitlab.fme.lan/hussain/gstar-parser" }
gstar_parser = {path = "/home/snawar/projects/gstar_rs/gstar_parser" }