[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs_recon_units"
version = "1.1.1"
description = "Units of gammaSTAR Reconstructions"
authors = [
    { name = "Joern Huber" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "mrpy_recon_tools == 1.1.1"
]

[tool.setuptools.packages.find]
where = ["src"]
